<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context="com.sergio.ratingexample.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_prueba1" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_prueba2" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_prueba3" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="2.5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_prueba4" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3.5"
                app:mrb_progressBackgroundTint="@color/colorAccent"
                app:mrb_progressTint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_prueba5" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3"

                app:mrb_progressTint="@color/colorPrimary"
                app:mrb_fillBackgroundStars="false"
                app:mrb_secondaryProgressTint="@color/colorAccent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_prueba6" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar

                android:id="@+id/rtmEvento"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"

                android:numStars="5"
                android:rating="0"
                app:mrb_progressBackgroundTint="@color/colorAccent"
                app:mrb_progressTint="@color/colorPrimary" />


        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
